[package]
name = "konfig-rust-derive"
version = "0.1.1"
edition = "2024"
description = "A derive macro for the konfig-rust library, allowing shorthand implementation of the KonfigSection trait"
license = "MIT"
authors = ["kociumba <kociumba1@gmail.com>"]
repository = "https://github.com/kociumba/konfig-rust"
readme = "README.md"
keywords = ["config", "derive", "json", "yaml", "toml"]
categories = ["config", "development-tools::procedural-macro-helpers"]

[dependencies]
syn = "2.0.98"
quote = "1.0.38"

[lib]
proc-macro = true
