[package]
name = "konfig-rust"
version = "0.1.1"
edition = "2024"
description = "A library providing a simple way to cnteralized config management in your codebase"
license = "MIT"
authors = ["kociumba <kociumba1@gmail.com>"]
repository = "https://github.com/kociumba/konfig-rust"
readme = "README.md"
keywords = ["config", "configuration", "json", "yaml", "toml"]
categories = ["config", "data-structures"]


[dependencies]
thiserror = "2.0.11"
serde = { version = "1.0.218", features = ["derive"] }
konfig-rust-derive = "0.1.1"
#konfig-rust-derive = { path = "../konfig-rust-derive" }
serde_json = "1.0.139"
serde_yaml = "0.9.34+deprecated"
toml = "0.8.20"
